lesson-19/test-pod.yaml
apiVersion: v1
kind: Pod
metadata: 
  name: pod3
  labels:
    a: a
spec:
  containers:
  - name: busybox
    image: ikubernetes/myapp:v1

---
apiVersion: v1
kind: Pod
metadata:
  name: pod2
  labels:
    b: b
spec:
  containers:
  - name: busybox
    image: ikubernetes/myapp:v1

---
apiVersion: v1
kind: Pod
metadata:
  name: mysql-pod
  namespace: dev
  labels:
    c: c
spec:
  containers:
  - name: busybox
    image: ikubernetes/myapp:v1
    ports:
    - name: mysql
      containerPort: 3306
