lesson-19/namespace_default-allow_nodepv_somepod.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-nodepv-somepod
  namespace: default
spec:
  podSelector:
     matchLabels:
       a: a
  ingress:
  - from:
    - ipBlock:
        cidr: 10.244.1.37/32
