lesson-19/namespace_default-deny_all_outsidepv.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-outsidepv
  namespace: default
spec:
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: test
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app: test
